extension_tests/invalid/syntaxErr/for/forKeyWordDonneErr.wacc
# done typo

# Output;
# #syntax_error#

# Exit:
# 100

# Program

begin
    for (int i = 0; i < 5; i+1) do
        skip
    donne
end

